更改字体，撰写设置，更改代码结构

--- a/cb4s.qrc
+++ b/cb4s.qrc
@@ -14,4 +14,5 @@
         <file alias="ref">images/ReloadCircle.svg</file>
         <file alias="gh">images/LogoGithub.svg</file>
     </qresource>
+    <qresource prefix="/"/>
 </RCC>
